@@ -52,7 +52,8 @@ class CHost extends CZBXAPI{
  * @param boolean $options['selectGraphs'] select Graphs
  * @param boolean $options['selectApplications'] select Applications
  * @param boolean $options['selectMacros'] select Macros
- * @param boolean $options['selectProfile'] select Profile
+ * @param boolean|array $options['selectProfile'] select Profile
+ * @param boolean $options['withProfile'] select only hosts with profiles
  * @param int $options['count'] count Hosts, returned column name is rowscount
  * @param string $options['pattern'] search hosts by pattern in Host name
  * @param string $options['extendPattern'] search hosts by pattern in Host name, ip and DNS
@@ -107,7 +108,7 @@ class CHost extends CZBXAPI{
 			'with_httptests'			=> null,
 			'with_monitored_httptests'	=> null,
 			'with_graphs'				=> null,
-			'withProfiles'				=> null,
+			'withProfile'				=> null,
 			'editable'					=> null,
 			'nopermissions'				=> null,
 
@@ -485,8 +486,8 @@ class CHost extends CZBXAPI{
 						' AND i.itemid=gi.itemid)';
 		}
 
-// withProfiles
-		if(!is_null($options['withProfiles']) && $options['withProfiles']){
+// withProfile
+		if(!is_null($options['withProfile']) && $options['withProfile']){
 			$sql_parts['where'][] = ' h.hostid IN ( '.
 					' SELECT hp.hostid '.
 					' FROM host_profile hp )';
@@ -768,8 +769,22 @@ Copt::memoryPick();
 		}
 
 // Adding Profiles
-		if(!is_null($options['selectProfile']) && $options['selectProfile']){
-			$sql = 'SELECT hp.* '.
+		if(!is_null($options['selectProfile']) && $options['selectProfile'] !== false){
+			if(is_array($options['selectProfile'])){
+				// if we are given a list of fields that needs to be fetched
+				$dbTable = DB::getSchema('host_profile');
+				$selectHP = array('hp.hostid');
+				foreach($options['selectProfile'] as $field){
+					if(isset($dbTable['fields'][$field]))
+						$selectHP[] = 'hp.'.$field;
+				}
+			}
+			else{
+				// all fields are needed
+				$selectHP = array('hp.*');
+			}
+
+			$sql = 'SELECT '.implode(', ', $selectHP).
 				' FROM host_profile hp '.
 				' WHERE '.DBcondition('hp.hostid', $hostids);
 			$db_profile = DBselect($sql);
